--- a/App360IDSDKSample/App360IDSDKSample/App360IDSDKSample/App360IDSDKSample.csproj
+++ b/App360IDSDKSample/App360IDSDKSample/App360IDSDKSample/App360IDSDKSample.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{79CEAEDC-1BDA-4CD3-8080-F4AE01948DEC}</ProjectGuid>
+    <ProjectGuid>{1640105A-926D-47AD-97B2-257B2237B37F}</ProjectGuid>
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -27,7 +27,7 @@
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <NuGetPackageImportStamp>90dba75b</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>619bbde1</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -154,7 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="App360IDSDK, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\Release\Sample Project\App360IDSDKSample\packages\App360IDSDK.1.0.3-alpha\lib\wp80\App360IDSDK.dll</HintPath>
+      <HintPath>..\packages\App360IDSDK.1.0.3-alpha\lib\wp80\App360IDSDK.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
